--- a/index.html
+++ b/index.html
@@ -1,44 +1,43 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
+<head>
+	<meta charset="utf-8">
 	<title>DEVICE</title>
-	</head>
+</head>
 <body>
 	<header class="main-header">
-			<a class="main-header-logo">
+		<a class="main-header-logo">
 			<img src="#img/index-logo.svg" width="281" height="39" alt="Логотип DEVICE">
-			</a><br>
-		<form action="#" method="get">
-			<input placeholder="Поиск по сайту" type="search">
-			</form>
-		<ul class="user-navigation">
-			<li class="login"><a href="#">Войти</a></li>
-		</ul>
-		<ul>
-			<li class="compare"><a href="#" title="Сравнить товары">Сравнить</a></li>
-			<li class="cart"><a href="#" title="Оплатить покупку">Корзина</a></li>
-		</ul>
+		</a>
+	<form action="#" method="get">
+		<input placeholder="Поиск по сайту" type="search">
+	</form>
+	<ul class="user-navigation">
+		<li class="login"><a class="entrance-link" href="#" title="Войти">Войти</a></li>
+	</ul>
+	<ul>
+		<li class="compare"><a class="ompare-link" href="#" title="Сравнить товары">Сравнить</a></li>
+		<li class="cart"><a class="basket-link" href="#" title="Оплатить покупку">Корзина</a></li>
+	</ul>
 	<nav class="main-navigation">
-		<ul class="main-navigation-list">
-			<li class="main-navigation"><a class="main-navigation-link" href="#">Каталог товаров</a></li>
-			<li class="main-navigation"><a class="main-navigation-link" href="#">Доставка</a></li>
-			<li class="main-navigation"><a class="main-navigation-link" href="#">Гарантия</a></li>
-			<li class="main-navigation"><a class="main-navigation-link" href="#">Контакты</a></li>
-		</ul>
+	<ul class="main-navigation-list">
+		<li class="main-navigation"><a class="main-navigation-link" href="#">Каталог товаров</a></li>
+		<li class="main-navigation"><a class="main-navigation-link" href="#">Доставка</a></li>
+		<li class="main-navigation"><a class="main-navigation-link" href="#">Гарантия</a></li>
+		<li class="main-navigation"><a class="main-navigation-link" href="#">Контакты</a></li>
+	</ul>
 	</nav>
 	</header>
-	<main class="container">
-		<h1 class="visually-hidden">DEVICE</h1>
-			<section class="product-slider">
+<main class="container">
+	<h1 class="visually-hidden">DEVICE</h1>
+	<section class="product-slider">
 		<h2 class="visually-hidden">Все о товаре</h2>
-		<ul class="main-image">
-			<li class="image"><img src="#img/selfi.img" width="200" height="200" alt="Селфи палка">
-		</ul>
-		<b>Делай селфи, как Бен Стиллер!</b>
-		<p>Самая длинная палка для селфи доступна в нашем магазине<br>
-			Восемь (Восемь, Карл) метров длинной и весом 5 килограмм</p>
-		<p><a class="button learn-more-button" href="#"><b>Подробнее</b></a></p>
+	<ul class="main-image">
+		<li class="image"><img src="#img/selfi.img" width="200" height="200" alt="Селфи палка">
+	</ul>
+	<b>Делай селфи,<br> как Бен Стиллер!</b>
+	<p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл) метров длинной и весом 5 килограмм</p>
+	<p><a class="button learn-more-button" href="#"><b>Подробнее</b></a></p>
 	<table class="table">
 		<tr class="line-1">
 			<td class="table-cell">8,5 м</td>
@@ -51,93 +50,87 @@
 			<td class="table-cell-title"><span>Материал</span></td>
 		</tr>
 	</table>
-			</section>
+	</section>
 	<section class="popular-items">
 	<h2 class="visually-hidden">Популярные товары</h2>
-		<ul class="product-categories">
-			<li class="categories">
-				<a class="main-product" href="#">Виртуальная реальность</a>
-			</li>
-			<li class="categories">
-				<a class="main-product" href="#">Моноподы для селфи</a>
-			</li>
-			<li class="categories">
-				<a class="main-product" href="#">Экшен камеры</a>
-			</li>
-			<li class="categories">
-				<a class="main-product" href="#">Фитнес браслеты</a>
-			</li>
-			<li class="categories">
-				<a class="main-product" href="#">Умные часы</a>
-			</li>
-			<li class="categories">
-				<a class="main-product" href="#">Квадрокоптеры</a>
-			</li>
+	<ul class="product-categories">
+		<li class="categories">
+			<a class="main-product" href="#">Виртуальная реальность</a>
+		</li>
+		<li class="categories">
+			<a class="main-product" href="#">Моноподы для селфи</a>
+		</li>
+		<li class="categories">
+			<a class="main-product" href="#">Экшен камеры</a>
+		</li>
+		<li class="categories">
+			<a class="main-product" href="#">Фитнес браслеты</a>
+		</li>
+		<li class="categories">
+			<a class="main-product" href="#">Умные часы</a>
+		</li>
+		<li class="categories">
+			<a class="main-product" href="#">Квадрокоптеры</a>
+		</li>
 		</ul>
-		</section>
-		<section class="slider">
+	</section>
+	<section class="slider">
 		<h2 class="visually-hidden">Услуги</h2>
-		<ul class="feature-list">
-			<li class="feature-item">
-				<span class="button services-button">Доставка</span>
-			</li>
-			<li class="feature-item">
-				<span class="button services-button">Гарантия</span>
-			</li>
-			<li class="feature-item">
-				<span class="button services-button">Кредит</span>
-			</li>
-		</ul>	
-			<b>Доставка</b>
-			<p>Мы с удовольствием доставим ваш товар прямо к вашему<br>
-				подъезду совершенно бесплатно! Ведь мы неплохо<br>
-				заработаем, поднимая его на ваш этаж</p>
-			<img src="#img/delivery.img" width="50" height="100" alt="Курьер">
-		</section>
-		<section class="site-manufacturers">
+	<ul class="feature-list">
+		<li class="feature-item">
+			<span class="button services-button">Доставка</span>
+		</li>
+		<li class="feature-item">
+			<span class="button services-button">Гарантия</span>
+		</li>
+		<li class="feature-item">
+			<span class="button services-button">Кредит</span>
+		</li>
+	</ul> 
+	<b>Доставка</b>
+	<p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо<br>заработаем, поднимая его на ваш этаж</p>
+	<img src="#img/delivery.img" width="50" height="100" alt="Курьер">
+	</section>
+	<section class="site-manufacturers">
 		<h2 class="visually-hidden">Партнеры</h2>
-		<ul class="brands-list">
-			<li class="partners">
-				<img src="#img/logo-1.img" width="50" height="50" alt="Dji">
-			</li>
-			<li class="feature-item">
-				<img src="#img/logo-2.img" width="100" height="20" alt="SP">
-			</li>
-			<li class="feature-item">
-				<img src="#img/logo-3.img" width="70" height="25" alt="GoPro">
-			</li>
-			<li class="feature-item">
-				<img src="#img/logo-4.img" width="50" height="20" alt="VIVE">
-			</li>
+	<ul class="brands-list">
+		<li class="partners">
+			<img src="#img/logo-1.img" width="50" height="50" alt="Dji">
+		</li>
+		<li class="feature-item">
+			<img src="#img/logo-2.img" width="100" height="20" alt="SP">
+		</li>
+		<li class="feature-item">
+			<img src="#img/logo-3.img" width="70" height="25" alt="GoPro">
+		</li>
+		<li class="feature-item">
+			<img src="#img/logo-4.img" width="50" height="20" alt="VIVE">
+		</li>
 		</ul>
-		</section>
-		<section class="about-us">
+	</section>
+	<section class="about-us">
 		<h2>О нас</h2>
-		<p>Огромный выбор гаджетов не оставит равнодушным гика,<br>
-			который есть в каждом из нас</p>
-		<p>Мы можем доставить ваш товар в самые отдаленные точки<br>
-			России! DEVICE работает со многими транспортными кампаниями</p>
+		<p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас</p>
+		<p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными кампаниями</p>
 		<p><b>Деловые линии</b></p>
 		<p><b>Автотрейдинг</b></p>
 		<p><b>ЖелДорЭкспедиция</b></p>
-			<a class="button more-about-us-button" href="#"><b>Подробнее о нас</b></a>
-		</section>
-		<section class="contacts">
+		<a class="button more-about-us-button" href="#"><b>Подробнее о нас</b></a>
+	</section>
+	<section class="contacts">
 		<h2>Контакты</h2>
-		<p>Вы можете забрать товар сами, заехав к нам в офис. Заодно, вы сможете<br>
-			проверить работоспособность покупки. Всякое бывает.
-		</p>
+		<p>Вы можете забрать товар сами, заехав к нам в офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
 			<a href="#"><img src="#img/map.img" width="250" height="150" alt="Карта"></a>
 		<p><a class="button contact-us-button" href="#">Напишите нам</a></p>
-		</section>
-	</main>
-	<footer class="main-footer">
-		<img src="#img/index-logo.svg" width="281" height="39" alt="Логотип DEVICE">
+	</section>
+</main>
+<footer class="main-footer">
+	<img src="#img/index-logo.svg" width="281" height="39" alt="Логотип DEVICE">
 		<p class="footer-location">г. Москва, ул. Строителей, 15</p>
 	<ul class="site-navigation">
-		<li class="footer-services"><a href="#">Доставка</a></li>
-		<li class="footer-services"><a href="#">Гарантия</a></li>
-		<li class="footer-services"><a href="#">Контакты</a></li>
+		<li class="footer-services"><a class="footer-services-link" href="#">Доставка</a></li>
+		<li class="footer-services"><a class="footer-services-link" href="#">Гарантия</a></li>
+		<li class="footer-services"><a class="footer-services-link" href="#">Контакты</a></li>
 	</ul>
 	<ul class="social-list">
 		<li class="social-item"><a class="social-link facebook" href="#">Фейсбук</a></li>
@@ -151,22 +144,22 @@
 	</nav>
 	<p class="footer-contacts">
 		<a href="tel:+74954959595">Тел.: +7(495) 495-95-95</a> 
-	<a href="#html">Логотип</a>
-	</footer>
+		<a href="#html">Логотип</a>
+</footer>
 	<section class="modal modal-write-us">
-	<h2 class="visually-hidden">Обратная связь</h2>
-			<p>Ваше имя:</p>
-		<!-- Здесь будет форма -->
-			<p>Текст письма:</p>
-		<!-- Здесь будет форма -->
-			<p>Ваш e-mail:</p>
-		<!-- Здесь будет форма -->
-		<!-- Здесь будет форма -->
+		<h2 class="visually-hidden">Обратная связь</h2>
+	<p>Ваше имя:</p>
+	<!-- Здесь будет форма -->
+	<p>Текст письма:</p>
+	<!-- Здесь будет форма -->
+	<p>Ваш e-mail:</p>
+	<!-- Здесь будет форма -->
+	<!-- Здесь будет форма -->
 		<span class="modal-close">x</span>
 	</section>
 	<section class="modal modal-map">
-	<h2 class="visually-hidden">Как до нас добраться</h2>
-	<span class="modal-close">x</span>
+		<h2 class="visually-hidden">Как до нас добраться</h2>
+			<span class="modal-close">x</span>
 	</section>
 </body>
 </html>
