--- a/index.html
+++ b/index.html
@@ -1,165 +1,183 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<meta charset="utf-8">
-	<title>DEVICE</title>
+  <meta charset="utf-8">
+  <title>DEVICE</title>
 </head>
 <body>
-	<header class="main-header">
-		<a class="main-header-logo">
-			<img src="#img/index-logo.svg" width="281" height="39" alt="Логотип DEVICE">
-		</a>
-	<form action="#" method="get">
-		<input placeholder="Поиск по сайту" type="search">
-	</form>
-	<ul class="user-navigation">
-		<li class="login"><a class="entrance-link" href="#" title="Войти">Войти</a></li>
-	</ul>
-	<ul>
-		<li class="compare"><a class="ompare-link" href="#" title="Сравнить товары">Сравнить</a></li>
-		<li class="cart"><a class="basket-link" href="#" title="Оплатить покупку">Корзина</a></li>
-	</ul>
-	<nav class="main-navigation">
-	<ul class="main-navigation-list">
-		<li class="main-navigation"><a class="main-navigation-link" href="#">Каталог товаров</a></li>
-		<li class="main-navigation"><a class="main-navigation-link" href="#">Доставка</a></li>
-		<li class="main-navigation"><a class="main-navigation-link" href="#">Гарантия</a></li>
-		<li class="main-navigation"><a class="main-navigation-link" href="#">Контакты</a></li>
-	</ul>
-	</nav>
-	</header>
-<main class="container">
-	<h1 class="visually-hidden">DEVICE</h1>
-	<section class="product-slider">
-		<h2 class="visually-hidden">Все о товаре</h2>
-	<ul class="main-image">
-		<li class="image"><img src="#img/selfi.img" width="200" height="200" alt="Селфи палка">
-	</ul>
-	<b>Делай селфи,<br> как Бен Стиллер!</b>
-	<p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл) метров длинной и весом 5 килограмм</p>
-	<p><a class="button learn-more-button" href="#"><b>Подробнее</b></a></p>
-	<table class="table">
-		<tr class="line-1">
-			<td class="table-cell">8,5 м</td>
-			<td class="table-cell">5 кг</td>
-			<td class="table-cell">Карбон</td>
-		</tr>
-		<tr class="line-2">
-			<td class="table-cell-title"><span>Длина палки</span></td>
-			<td class="table-cell-title"><span>Вес палки</span></td>
-			<td class="table-cell-title"><span>Материал</span></td>
-		</tr>
-	</table>
-	</section>
-	<section class="popular-items">
-	<h2 class="visually-hidden">Популярные товары</h2>
-	<ul class="product-categories">
-		<li class="categories">
-			<a class="main-product" href="#">Виртуальная реальность</a>
-		</li>
-		<li class="categories">
-			<a class="main-product" href="#">Моноподы для селфи</a>
-		</li>
-		<li class="categories">
-			<a class="main-product" href="#">Экшен камеры</a>
-		</li>
-		<li class="categories">
-			<a class="main-product" href="#">Фитнес браслеты</a>
-		</li>
-		<li class="categories">
-			<a class="main-product" href="#">Умные часы</a>
-		</li>
-		<li class="categories">
-			<a class="main-product" href="#">Квадрокоптеры</a>
-		</li>
-		</ul>
-	</section>
-	<section class="slider">
-		<h2 class="visually-hidden">Услуги</h2>
-	<ul class="feature-list">
-		<li class="feature-item">
-			<span class="button services-button">Доставка</span>
-		</li>
-		<li class="feature-item">
-			<span class="button services-button">Гарантия</span>
-		</li>
-		<li class="feature-item">
-			<span class="button services-button">Кредит</span>
-		</li>
-	</ul> 
-	<b>Доставка</b>
-	<p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо<br>заработаем, поднимая его на ваш этаж</p>
-	<img src="#img/delivery.img" width="50" height="100" alt="Курьер">
-	</section>
-	<section class="site-manufacturers">
-		<h2 class="visually-hidden">Партнеры</h2>
-	<ul class="brands-list">
-		<li class="partners">
-			<img src="#img/logo-1.img" width="50" height="50" alt="Dji">
-		</li>
-		<li class="feature-item">
-			<img src="#img/logo-2.img" width="100" height="20" alt="SP">
-		</li>
-		<li class="feature-item">
-			<img src="#img/logo-3.img" width="70" height="25" alt="GoPro">
-		</li>
-		<li class="feature-item">
-			<img src="#img/logo-4.img" width="50" height="20" alt="VIVE">
-		</li>
-		</ul>
-	</section>
-	<section class="about-us">
-		<h2>О нас</h2>
-		<p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас</p>
-		<p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными кампаниями</p>
-		<p><b>Деловые линии</b></p>
-		<p><b>Автотрейдинг</b></p>
-		<p><b>ЖелДорЭкспедиция</b></p>
-		<a class="button more-about-us-button" href="#"><b>Подробнее о нас</b></a>
-	</section>
-	<section class="contacts">
-		<h2>Контакты</h2>
-		<p>Вы можете забрать товар сами, заехав к нам в офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-			<a href="#"><img src="#img/map.img" width="250" height="150" alt="Карта"></a>
-		<p><a class="button contact-us-button" href="#">Напишите нам</a></p>
-	</section>
-</main>
-<footer class="main-footer">
-	<img src="#img/index-logo.svg" width="281" height="39" alt="Логотип DEVICE">
-		<p class="footer-location">г. Москва, ул. Строителей, 15</p>
-	<ul class="site-navigation">
-		<li class="footer-services"><a class="footer-services-link" href="#">Доставка</a></li>
-		<li class="footer-services"><a class="footer-services-link" href="#">Гарантия</a></li>
-		<li class="footer-services"><a class="footer-services-link" href="#">Контакты</a></li>
-	</ul>
-	<ul class="social-list">
-		<li class="social-item"><a class="social-link facebook" href="#">Фейсбук</a></li>
-		<li class="social-item"><a class="social-link instagram" href="#">Инстаграмм</a></li>
-		<li class="social-item"><a class="social-link twitter" href="#">Твиттер</a></li>
-	</ul>  
-	<nav>
-		<a href="#">Войти</a>
-		<a href="#">Сравнить</a>
-		<a href="#">Корзина</a>
-	</nav>
-	<p class="footer-contacts">
-		<a href="tel:+74954959595">Тел.: +7(495) 495-95-95</a> 
-		<a href="#html">Логотип</a>
-</footer>
-	<section class="modal modal-write-us">
-		<h2 class="visually-hidden">Обратная связь</h2>
-	<p>Ваше имя:</p>
-	<!-- Здесь будет форма -->
-	<p>Текст письма:</p>
-	<!-- Здесь будет форма -->
-	<p>Ваш e-mail:</p>
-	<!-- Здесь будет форма -->
-	<!-- Здесь будет форма -->
-		<span class="modal-close">x</span>
-	</section>
-	<section class="modal modal-map">
-		<h2 class="visually-hidden">Как до нас добраться</h2>
-			<span class="modal-close">x</span>
-	</section>
+  <header class="main-header">
+    <a class="main-header-logo">
+      <img src="img/png/logo.png" width="164" height="36" alt="Логотип DEVICE">
+    </a>
+    <form action="#" method="get">
+      <img src="img/svg/search.svg" width="16" height="16" alt="Поиск"><input placeholder="Поиск по сайту" type="search">
+    </form>
+    <ul class="user-navigation">
+      <li class="login"><img src="img/svg/user.svg" width="13" height="12" alt="Иконка пользователя"><a class="login-link" href="#" title="Войти">Войти</a></li>
+    </ul>
+    <ul>
+      <li class="compare"><img src="img/svg/compare.svg" width="10" height="10" alt="Иконка сравнить"><a class="compare-link" href="#" title="Сравнить товары">Сравнить</a></li>
+      <li class="cart"><img src="img/svg/cart.svg" width="12" height="12" alt="Корзина"><a class="basket-link" href="#" title="Оплатить покупку">Корзина</a></li>
+    </ul>
+    <nav class="main-navigation">
+      <ul class="main-navigation-list">
+        <li class="main-navigation"><a class="main-navigation-link" href="#">Каталог товаров</a><img src="img/svg/plus.svg" width="16" height="16" alt="Плюс"></li>
+        <li class="main-navigation"><a class="main-navigation-link" href="#">Доставка</a></li>
+        <li class="main-navigation"><a class="main-navigation-link" href="#">Гарантия</a></li>
+        <li class="main-navigation"><a class="main-navigation-link" href="#">Контакты</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main class="container">
+    <h1 class="visually-hidden">DEVICE</h1>
+    <section class="product-slider">
+      <h2 class="visually-hidden">Все о товаре</h2>
+      <ul class="main-image">
+        <li class="image"><img src="img/png/slider-1.png" width="384" height="486" alt="Селфи палка">
+        </ul>
+        <b>Делай селфи,<br> как Бен Стиллер!</b>
+        <p>Самая длинная палка для селфи доступна в нашем магазине Восемь (Восемь, Карл) метров длинной и весом 5 килограмм</p>
+        <p><a class="button learn-more-button" href="#"><b>Подробнее</b></a></p>
+        <table class="table">
+          <tr class="line-1">
+            <td class="table-cell">8,5 м</td>
+            <td class="table-cell">5 кг</td>
+            <td class="table-cell">Карбон</td>
+          </tr>
+          <tr class="line-2">
+            <td class="table-cell-title"><span>Длина палки</span></td>
+            <td class="table-cell-title"><span>Вес палки</span></td>
+            <td class="table-cell-title"><span>Материал</span></td>
+          </tr>
+        </table>
+        <ul class="popular-products-buttons">
+          <li class="button-product"><button>Первый товар</button></li>
+          <li class="button-product"><button>Второй товар</button></li>
+          <li class="button-product"><button>Третий товар</button></li>
+        </ul>
+    </section>
+    <section class="popular-items">
+      <h2 class="visually-hidden">Популярные товары</h2>
+      <ul class="product-categories">
+        <li class="categories">
+          <a class="main-product" href="#"><img src="img/png/virtual.png" width="160" height="160" alt="Виртуальные очки">Виртуальная реальность</a>
+        </li>
+        <li class="categories">
+          <a class="main-product" href="#"><img src="img/png/selfi.png" width="160" height="160" alt="Моноподы для селфи">Моноподы для селфи</a>
+        </li>
+        <li class="categories">
+          <a class="main-product" href="#"><img src="img/png/camera.png" width="160" height="160" alt="Экшен-камера">Экшен камеры</a>
+        </li>
+        <li class="categories">
+          <a class="main-product" href="#"><img src="img/png/bracelet.png" width="160" height="160" alt="Фитнес браслеты">Фитнес браслеты</a>
+        </li>
+        <li class="categories">
+          <a class="main-product" href="#"><img src="img/png/clock.png" width="160" height="160" alt="Умные часы">Умные часы</a>
+        </li>
+        <li class="categories">
+          <a class="main-product" href="#"><img src="img/png/cvadro.png" width="160" height="160" alt="Квадрокоптеры">Квадрокоптеры</a>
+        </li>
+        </ul>
+    </section>
+    <section class="slider">
+      <h2 class="visually-hidden">Услуги</h2>
+      <ul class="feature-list">
+        <li class="feature-item">
+          <button class="button services-button">Доставка</span>
+        </li>
+        <li class="feature-item">
+          <button class="button services-button">Гарантия</span>
+        </li>
+        <li class="feature-item">
+          <button class="button services-button">Кредит</span>
+        </li>
+        </ul>
+        <b>Доставка</b>
+        <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо<br>заработаем, поднимая его на ваш этаж</p>
+        <img src="img/png/delivery.png" width="136" height="164" alt="Курьер">
+    </section>
+    <section class="site-manufacturers">
+      <h2 class="visually-hidden">Партнеры</h2>
+      <ul class="brands-list">
+        <li class="partners">
+          <a class="partners-lin" href="#"><img src="img/png/logo-1.png" width="260" height="100" alt="Dji"></a>
+        </li>
+        <li class="feature-item">
+          <a class="partners-lin" href="#"><img src="img/png/logo-5.png" width="260" height="100" alt="SP"></a>
+        </li>
+        <li class="feature-item">
+          <a class="partners-lin" href="#"><img src="img/png/logo-3.png" width="260" height="100" alt="GoPro"></a>
+        </li>
+        <li class="feature-item">
+          <a class="partners-lin" href="#"><img src="img/png/logo-4.png" width="260" height="100" alt="VIVE"></a>
+        </li>
+        </ul>
+    </section>
+    <section class="about-us">
+      <h2>О нас</h2>
+      <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас</p>
+      <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными кампаниями</p>
+      <ul class="delivery-list">
+    <li class="company"><b>Деловые линии</b></li>
+    <li class="company"><b>Автотрейдинг</b></li>
+    <li class="company"><b>ЖелДорЭкспедиция</b></li>
+    </ul>
+    <a class="button more-about-us-button" href="#"><b>Подробнее о нас</b></a>
+    </section>
+      <section class="contacts">
+        <h2>Контакты</h2>
+        <p>Вы можете забрать товар сами, заехав к нам в офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+        <a href="#"><img src="img/png/map.png" width="560" height="222" alt="Карта"></a>
+        <p><a class="button contact-us-button" href="#">Напишите нам</a></p>
+      </section>
+    </main>
+    <footer class="main-footer">
+      <img src="img/png/logo.png" width="163" height="36" alt="Логотип DEVICE">
+      <p class="footer-location">г. Москва, ул. Строителей, 15</p>
+      <ul class="site-navigation">
+        <li class="footer-services"><a class="footer-services-link" href="#">Доставка</a></li>
+        <li class="footer-services"><a class="footer-services-link" href="#">Гарантия</a></li>
+        <li class="footer-services"><a class="footer-services-link" href="#">Контакты</a></li>
+      </ul>
+      <ul class="social-list">
+        <li class="social-item"><a class="social-link facebook" href="#">Фейсбук</a></li>
+        <li class="social-item"><a class="social-link instagram" href="#">Инстаграмм</a></li>
+        <li class="social-item"><a class="social-link twitter" href="#">Твиттер</a></li>
+      </ul>  
+      <nav>
+        <img src="img/svg/user.svg" width="13" height="12" alt="Иконка пользователя"><a class="login-link" href="#" title="Войти">Войти</a>
+        <img src="img/svg/compare.svg" width="10" height="10" alt="Иконка сравнить"><a class="compare-link" href="#" title="Сравнить товары">Сравнить</a></li>
+        <img src="img/svg/cart.svg" width="12" height="12" alt="Корзина"><a class="basket-link" href="#" title="Оплатить покупку">Корзина</a></li>
+      </nav>
+      <p class="footer-contacts">
+        <a href="tel:+74954959595">Тел.: +7(495) 495-95-95</a> 
+        <a href="#"><img src="img/svg/logo-html.svg" width="27" height="35" alt="Логотип html"></a>
+    </footer>
+    <section class="modal modal-write-us">
+      <h2 class="visually-hidden">Обратная связь</h2>
+      <form class="appointment-form" action="#" method="get">
+      <p class="appointment-item">
+        <label for="appointment-name">Ваше имя:</label>
+       <input id="appointment-name" type="text" name="name" value="" placeholder="Представьтесь, пожалуйста">
+      </p>
+      <p class="appointment-item">
+        <label for="appointment-text">Текст письма:</label>
+       <input id="appointment-text" type="text" name="text" value="" placeholder="В свободной форме">
+      </p>
+      <p class="appointment-item">
+        <label for="appointment-mail">Ваш e-mail:</label>
+       <input id="appointment-mail" type="text" name="e-mail" value="" placeholder="Для отправки ответа">
+      </p>
+      <button class="button" type="sumbit"><b>Отправить</b></button>
+      </form>
+      <button class="modal-close" type="button">Закрыть</button>
+    </section>
+    <section class="modal modal-map">
+      <h2 class="visually-hidden">Как до нас добраться</h2>
+      <p>
+       <img src="img/png/map-big.png" width="999" height="598" alt="Адрес офиса">
+      </p>
+      <button class="modal-close" type="button">Закрыть</button>
+    </section>
 </body>
 </html>
