--- a/catalog.html
+++ b/catalog.html
@@ -1,114 +1,127 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<meta charset="utf-8">
-	<title>Каталок товаров DEVICE</title>
+  <meta charset="utf-8">
+  <title>Каталок товаров DEVICE</title>
 </head>
 <body>
-	<header class="main-header">
-		<a class="main-header-logo">
-			<img src="#img/index-logo.svg" width="281" height="39" alt="Логотип DEVICE">
-		</a>
-	<form action="#" method="get">
-		<input placeholder="Поиск по сайту" type="search">
-	</form>
-	<ul class="user-navigation">
-		<li class="login"><a class="go-out-link" href="#" title="Выйти">Выйти</a></li>
-	</ul>
-	<ul>
-		<li class="compare"><a class="ompare" href="#" title="Сравнить товары">Сравнить</a></li>
-		<li class="cart"><a class="basket" href="#" title="Оплатить покупку">Корзина</a></li>
-	</ul>
-	<nav class="main-navigation">
-		<ul class="main-navigation-list">
-			<li class="main-navigation"><a class="main-navigation-link" href="#">Каталог товаров</a></li>
-			<li class="main-navigation"><a class="main-navigation-link" href="#">Доставка</a></li>
-			<li class="main-navigation"><a class="main-navigation-link" href="#">Гарантия</a></li>
-			<li class="main-navigation"><a class="main-navigation-link" href="#">Контакты</a></li>
-	</ul>
-	</nav>
+  <header class="main-header">
+    <a class="main-header-logo">
+      <img src="img/png/logo.png" width="164" height="36" alt="Логотип DEVICE">
+    </a>
+  <form action="#" method="get">
+    <img src="img/svg/search.svg" width="16" height="16" alt="Поиск"><input placeholder="Поиск по сайту" type="search">
+  </form>
+  <ul class="user-navigation">
+    <li class="login"><img src="img/svg/user.svg" width="13" height="12" alt="Иконка пользователя"><a class="login-link" href="#" title="Выйти">Выйти</a></li>
+  </ul>
+  <ul>
+    <li class="compare"><img src="img/svg/compare.svg" width="10" height="10" alt="Иконка сравнить"><a class="compare-link" href="#" title="Сравнить товары">Сравнить</a></li>
+    <li class="cart"><img src="img/svg/cart.svg" width="12" height="12" alt="Корзина"><a class="basket-link" href="#" title="Оплатить покупку">Корзина</a></li>
+  </ul>
+  <nav class="main-navigation">
+    <ul class="main-navigation-list">
+      <li class="main-navigation"><a class="main-navigation-link" href="#">Каталог товаров</a>
+       <button class="plus button" type="button">Плюс</button></li>
+      <li class="main-navigation"><a class="main-navigation-link" href="#">Доставка</a></li>
+      <li class="main-navigation"><a class="main-navigation-link" href="#">Гарантия</a></li>
+      <li class="main-navigation"><a class="main-navigation-link" href="#">Контакты</a></li>
+  </ul>
+  </nav>
 </header>
 <main>
-	<h1>Моноподы для селфи</h1>
-	<div class="breadcrumbs">
-		<ul class="navigation-list">
-			<li class="navigation"><a class="navigation-link" href="#">Главная</a></li>
-			<li class="navigation"><a class="navigation-link" href="#">Каталог товаров</a></li>
-			<li class="navigation"><a class="navigation-link" href="#">Моноподы для селфи</a></li>
-		</ul>	
-	</div>
-	<section class="filter">
-		<h2 class="visually-hidden">Фильтр товаров</h2>
-		<p>Фильтр</p>
-		<p>Стоимость</p>
-		<!-- Здесь будет форма -->
-		<p>Цвет</p>
-		<ul class="main-color-list">
-			<li class="color-list">Черный</li><br>
-			<li class="color-list">Белый</li><br>
-			<li class="color-list">Синий</li><br>
-			<li class="color-list">Красный</li><br>
-			<li class="color-list">Розовый</li><br>
-		</ul>
-		<p>Bluetooth</p>
-		<ul class="availability">
-			<li class="availability-list">Есть</li><br>
-			<li class="availability-list">Нет</li>
-		</ul>
-		<button class="show-button">Показать</button>
-	</section>
-	<section class="list-of-products">
-		<h2 class="visually-hidden">Товары</h2>
-		<p>Сортировка:</p>
-		<ul class="sorting">
-			<li class="sorting-list"><button class="sorting-button">По цене</button></li>
-			<li class="sorting-list"><button class="sorting-button">По типу</button></li>
-			<li class="sorting-list"><button class="sorting-button">По популярности</button></li>	
-		</ul>
-		<ul class="main-pagination">
-			<li class="pagination-list"><a class="pagination-link" href="#"><img src="#img/selfi-1.img" width="100" height="100" alt="Любительская селфи-палка"></a>
-				<p class="name-pagination"><a class="pagination-link" href="#">Любительская селфи-палка 500 <span>руб.</span></a></p>
-			</li>
-			<li class="pagination-list"><a class="pagination-link" href="#"><img src="#img/selfi-2.img" width="100" height="100" alt="Профессиональная селфи-палка"></a>
-				<p class="name-pagination"><a class="pagination-link" href="#">Профессиональная селфи-палка 1 500 <span>руб.</span></a></p>
-			</li>
-			<li class="pagination-list"><a class="pagination-link" href="#"><img src="#img/selfi-3.img" width="100" height="100" alt="Непотопляемая селфи-палка"></a>
-				<p class="name-pagination"><a class="pagination-link" href="#">Непотопляемая селфи-палка 2 500 <span>руб.</span></a></p>
-			</li>
-			<li class="pagination-list"><a class="pagination-link" href="#"><img src="#img/selfi-3.img" width="100" height="100" alt="Селфи-палка <<Следуй за мной>>"></a>
-				<p class="name-pagination"><a class="pagination-link" href="#">Селфи-палка Следуй за мной 4 900 <span>руб.</span></a></p>
-			</li>
-		</ul>
-		<ul class="guide">
-			<li class="guide-list"><a class="button-back" href="#">Назад</a></li>
-			<li class="guide-list"><a class="button-digit" href="#">1</a></li>
-			<li class="guide-list"><a class="button-digit" href="#">2</a></li>
-			<li class="guide-list"><a class="button-digit" href="#">3</a></li>
-			<li class="guide-list"><a class="button-next" href="#">Вперед</a></li>
-		</ul>
-	</section>	
+  <h1>Моноподы для селфи</h1>
+  <div class="breadcrumbs">
+    <ul class="navigation-list">
+      <li class="navigation"><a class="navigation-link" href="#">Главная</a></li>
+      <li class="navigation"><a class="navigation-link" href="#">Каталог товаров</a></li>
+      <li class="navigation"><a class="navigation-link" href="#">Моноподы для селфи</a></li>
+    </ul>
+  </div>
+  <section class="filter">
+    <h2 class="visually-hidden">Фильтр товаров</h2>
+    <p>Фильтр</p>
+    <label for="price"><p>Стоимость</p>
+    <input type="range" name="radio" id="price">
+    <p>Цвет</p>
+    <ul class="main-color-list">
+      <li class="color-list"><input type="checkbox" name="color" id="color-black" checked>
+        <label for="color-black">Черный</label></li><br>
+      <li class="color-list"><input type="checkbox" name="color" id="color-white">
+        <label for="color-white">Белый</label></li><br>
+      <li class="color-list"><input type="checkbox" name="color" id="color-blue" checked>
+        <label for="color-blue">Синий</label></li><br>
+      <li class="color-list"><input type="checkbox" name="color" id="color-red" checked>
+        <label for="color-red">Красный</label></li><br>
+      <li class="color-list"><input type="checkbox" name="color" id="color-pink">
+        <label for="color-pink">Розовый</label></li><br>
+    </ul>
+    <p>Bluetooth</p>
+    <ul class="availability-bluetooth">
+      <li class="availability-list"><input type="radio" name="availability" id="there-is" checked>
+        <label for="there-is">Есть</label></li><br>
+      <li class="availability-list"><input type="radio" name="availability" id="no">
+        <label for="no">Нет</label></li>
+    </ul>
+    <button class="show-button">Показать</button>
+  </section>
+  <section class="list-of-products">
+    <h2 class="visually-hidden">Товары</h2>
+    <p>Сортировка:</p>
+    <ul class="sorting">
+      <li class="sorting-list"><button class="sorting-button">По цене</button></li>
+      <li class="sorting-list"><button class="sorting-button">По типу</button></li>
+      <li class="sorting-list"><button class="sorting-button">По популярности</button></li>
+    </ul>
+    <button class="sorting-button-arrow-up">По возрастанию</button>
+    <button class="sorting-button-arrow-down">По убыванию</button>
+    <ul class="main-pagination">
+      <li class="pagination-list"><a class="pagination-link" href="#"><img src="img/png/item-1.png" width="360" height="380" alt="Любительская селфи-палка"></a>
+        <p class="name-pagination"><a class="pagination-link" href="#">Любительская селфи-палка 500 <span>руб.</span></a></p>
+        <p class="catalog-item-buttons">
+        <button class="button item-basket-button">В корзину</button>
+        <button class="item-button">Добавить к сравнению</button>
+      </li>
+      <li class="pagination-list"><a class="pagination-link" href="#"><img src="img/png/item-2.png" width="360" height="380" alt="Профессиональная селфи-палка"></a>
+        <p class="name-pagination"><a class="pagination-link" href="#">Профессиональная селфи-палка 1 500 <span>руб.</span></a></p>
+      </li>
+      <li class="pagination-list"><a class="pagination-link" href="#"><img src="img/png/item-3.png" width="360" height="380" alt="Непотопляемая селфи-палка"></a>
+        <p class="name-pagination"><a class="pagination-link" href="#">Непотопляемая селфи-палка 2 500 <span>руб.</span></a></p>
+      </li>
+      <li class="pagination-list"><a class="pagination-link" href="#"><img src="img/png/item-4.png" width="360" height="380" alt="Селфи-палка <<Следуй за мной>>"></a>
+        <p class="name-pagination"><a class="pagination-link" href="#">Селфи-палка Следуй за мной 4 900 <span>руб.</span></a></p>
+      </li>
+    </ul>
+    <ul class="guide">
+      <li class="guide-list"><a class="button-back" href="#" title="Назад">Назад</a></li>
+      <li class="guide-list"><a class="button-digit" href="#" title="1">1</a></li>
+      <li class="guide-list"><a class="button-digit" href="#" title="2">2</a></li>
+      <li class="guide-list"><a class="button-digit" href="#" title="3">3</a></li>
+      <li class="guide-list"><a class="button-next" href="#" title="Вперед">Вперед</a></li>
+    </ul>
+  </section>
 </main>
 <footer class="main-footer">
-	<img src="#img/index-logo.svg" width="281" height="39" alt="Логотип DEVICE">
-			<p class="footer-location">г. Москва, ул. Строителей, 15</p>
-		<ul class="site-navigation">
-			<li class="footer-services"><a href="#">Доставка</a></li>
-			<li class="footer-services"><a href="#">Гарантия</a></li>
-			<li class="footer-services"><a href="#">Контакты</a></li>
-		</ul>
-		<ul class="social-list">
-			<li class="social-item"><a class="social-link facebook" href="#">Фейсбук</a></li>
-			<li class="social-item"><a class="social-link instagram" href="#">Инстаграмм</a></li>
-			<li class="social-item"><a class="social-link twitter" href="#">Твиттер</a></li>
-		</ul>  
-	<nav>
-		<a href="#">Войти</a>
-		<a href="#">Сравнить</a>
-		<a href="#">Корзина</a>
-	</nav>
-	<p class="footer-contacts">
-		<a href="tel:+74954959595">Тел.: +7(495) 495-95-95</a> 
-	<a href="#html">Логотип</a>
-	</footer>
+  <img src="img/png/logo.png" width="163" height="36" alt="Логотип DEVICE">
+      <p class="footer-location">г. Москва, ул. Строителей, 15</p>
+    <ul class="site-navigation">
+      <li class="footer-services"><a class="footer-services-link" href="#">Доставка</a></li>
+      <li class="footer-services"><a class="footer-services-link" href="#">Гарантия</a></li>
+      <li class="footer-services"><a class="footer-services-link" href="#">Контакты</a></li>
+    </ul>
+    <ul class="social-list">
+      <li class="social-item"><a class="social-link facebook" href="#">Фейсбук</a></li>
+      <li class="social-item"><a class="social-link instagram" href="#">Инстаграмм</a></li>
+      <li class="social-item"><a class="social-link twitter" href="#">Твиттер</a></li>
+    </ul>
+  <nav>
+    <img src="img/svg/user.svg" width="13" height="12" alt="Иконка пользователя"><a class="login-link" href="#" title="Войти">Войти</a>
+    <img src="img/svg/compare.svg" width="10" height="10" alt="Иконка сравнить"><a class="compare-link" href="#" title="Сравнить товары">Сравнить</a></li>
+    <img src="img/svg/cart.svg" width="12" height="12" alt="Корзина"><a class="basket-link" href="#" title="Оплатить покупку">Корзина</a></li>
+  </nav>
+  <p class="footer-contacts">
+    <a href="tel:+74954959595">Тел.: +7(495) 495-95-95</a> 
+  <a href="#"><img src="img/svg/logo-html.svg" width="27" height="35" alt="Логотип html"></a>
+</footer>
 </body>
 </html>
